[package]
name = "facilities-data-pull-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono"] }
chrono = { version = "0.4.44", features = ["serde"] }
dotenv = "0.15.0"
reqwest = { version = "0.13.3", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.3", features = ["full"] }
axum = "0.8.9"
